--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "ChillAPI interface package",
   "main": "index.js",
   "scripts": {
-    "prebuild": "rimraf dist/*",
+    "generate-openapi": "rimraf src/generated && node generate-openapi.mjs",
+    "prebuild": "rimraf dist/* && npm run generate-openapi",
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
     "tsc": "tsc",
     "build": "npm run lint && npm run tsc",
@@ -33,6 +34,7 @@
     "ts-node": "^9.0.0",
     "tslint": "^6.1.2",
     "typescript": "^4.0.5",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "json-schema-to-typescript": "^10.1.4"
   }
 }
