--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
     "tsc": "tsc",
     "build": "npm run lint && npm run tsc",
-    "build:watch": "tsc -w"
+    "build:watch": "tsc -w",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -32,9 +33,11 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "@types/node": "^14.0.27",
+    "@types/jest": "^26.0.23",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.2",
     "typescript": "^4.0.5",
+    "jest": "^27.0.5",
     "rimraf": "^3.0.2",
     "json-schema-to-typescript": "^10.1.4"
   }
