--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chillapi/api",
-  "version": "1.0.22",
+  "version": "1.0.23",
   "description": "ChillAPI interface package",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,6 +10,7 @@
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
     "tsc": "tsc",
     "build": "npm run lint && npm run tsc",
+    "postbuild": "copyfiles -f src/generated/openapiv3.d.ts dist",
     "build:watch": "tsc -w",
     "test": "jest"
   },
@@ -39,6 +40,7 @@
     "typescript": "^4.0.5",
     "jest": "^27.0.5",
     "rimraf": "^3.0.2",
+    "copyfiles":"^2.4.1",
     "json-schema-to-typescript": "^10.1.4"
   }
 }
