--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "npm run lint && npm run tsc",
     "postbuild": "copyfiles -f src/generated/openapiv3.d.ts dist",
     "build:watch": "tsc -w",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -40,7 +41,8 @@
     "typescript": "^4.0.5",
     "jest": "^27.0.5",
     "rimraf": "^3.0.2",
-    "copyfiles":"^2.4.1",
-    "json-schema-to-typescript": "^10.1.4"
+    "copyfiles": "^2.4.1",
+    "json-schema-to-typescript": "^10.1.4",
+    "husky": "^6.0.0"
   }
 }
