--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@babel/preset-typescript": "^7.12.7",
     "@types/node": "^14.0.27",
     "@types/jest": "^26.0.23",
+    "@types/handlebars":"^4.1.0",
     "ts-node": "^9.0.0",
+    "ts-jest":"^27.0.3",
     "tslint": "^6.1.2",
     "typescript": "^4.0.5",
     "jest": "^27.0.5",
@@ -44,5 +46,8 @@
     "copyfiles": "^2.4.1",
     "json-schema-to-typescript": "^10.1.4",
     "husky": "^6.0.0"
+  },
+  "peerDependencies": {
+    "handlebars":"^4.7.7"
   }
 }
